Fix scrollbar visibility and functionality

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
-.app {
-    overflow: hidden;
-}
 .main {
     display: flex;
     justify-content: space-between;
-    overflow: hidden;
 }
 
 .sidebar {
@@ -16,6 +12,14 @@
     min-height: 800px;
     background-color: var(--bg);
     z-index: 999;
+}
+
+.sidebar-wrapper {
+    overflow-y: auto;
+}
+
+.sidebar-wrapper::-webkit-scrollbar {
+    display: none;
 }
 
 .slider {
