--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ body {
     overflow: hidden;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 :root {
     /* --bg: rgb(245, 243, 243); */
     --bg: #FAF8F5;
